--- a/src/main/resources/static/homepageStyle.css
+++ b/src/main/resources/static/homepageStyle.css
@@ -4,9 +4,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-header {
-    border: 1px solid grey;
-}
+
 
 /*----- Navigation bar -----*/
 .navbar {
@@ -19,26 +17,25 @@ header {
 
 /*----- Logo -----*/
 .logo img {
-    border: 1px solid grey;
     width: 50px;
     height: 50px;
 }
 
 /*----- Menu -----*/
 .nav-links {
-    border: 1px solid grey;
     list-style: none;
     display: flex;
     gap: 30px;
 }
 
 .nav-links a {
-    border: 1px solid grey;
     text-decoration: none;
     color: #222;
     padding: 8px 15px;
     border-radius: 4px;
     transition: background 0.2s;
+    border: 1px solid grey;
+    font-family: "Itim", cursive;
 }
 
 .nav-links a:hover,
@@ -54,6 +51,7 @@ header {
   padding: 6px 16px;
   cursor: pointer;
   transition: all 0.2s;
+  font-family: "Itim", cursive;
 }
 
 .login-btn:hover {
@@ -63,9 +61,33 @@ header {
 
 /*----- main -----*/
 main {
-    border: 1px solid grey; 
     width: 100%;
     height: 1000px;
+}
+.introduction {
+    width: 100%;
+    height: 600px;
+    justify-items: center;
+    align-content: center;
+    background-image: url(homepageResources/cover.jpg);
+    background-size: cover;
+}
+.introduction h1,p {
+    width: max-content;
+    text-align: center;
+    font-family: "Mali", sans-serif;
+    margin: 10px;
+    padding: 15px;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.15);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    border-radius: 25px;
+    box-shadow: 0 0 40px rgba(0,0,0,0.1)
+}
+.cards {
+    border: 1px solid grey;
+    width: 100%;
 }
 /*----- footer -----*/
 footer {
