--- a/src/main/resources/static/homepageStyle.css
+++ b/src/main/resources/static/homepageStyle.css
@@ -1,46 +1,56 @@
+@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700&display=swap');
+
 /*----- header -----*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-
+header {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    background-color: #E5EEFF;
+}
 
 /*----- Navigation bar -----*/
 .navbar {
+    width: 100%;
+    margin: 0 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
-    padding: 10px 40px;
 }
 
 /*----- Logo -----*/
 .logo img {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
+    /*margin: 10px 40px;*/
 }
 
 /*----- Menu -----*/
 .nav-links {
     list-style: none;
     display: flex;
-    gap: 30px;
+    /*margin: 10px 100px 0 0;*/
+    padding: 0;
 }
 
 .nav-links a {
     text-decoration: none;
     color: #222;
-    padding: 8px 15px;
-    border-radius: 4px;
+    padding: 15px 20px;
+    border-radius: 50px;
     transition: background 0.2s;
-    border: 1px solid grey;
-    font-family: "Itim", cursive;
+    font-family: 'Manrope', sans-serif;
+    font-size: 16px;
 }
 
 .nav-links a:hover,
 .nav-links a.active {
-  background-color: #e6e6e6;
+  background-color: #FFFFFF;
 }
 
 /*----- Login button -----*/
@@ -48,10 +58,11 @@
   border: 1px solid #000;
   background: transparent;
   border-radius: 20px;
-  padding: 6px 16px;
+  padding: 6px 20px;
+  /*margin: 10px 20px;*/
   cursor: pointer;
   transition: all 0.2s;
-  font-family: "Itim", cursive;
+  font-family: 'Manrope', sans-serif;
 }
 
 .login-btn:hover {
@@ -75,7 +86,7 @@ main {
 .introduction h1,p {
     width: max-content;
     text-align: center;
-    font-family: "Mali", sans-serif;
+    font-family: 'Mali', sans-serif;
     margin: 10px;
     padding: 15px;
     color: #fff;
