--- a/src/main/resources/static/homepage.css
+++ b/src/main/resources/static/homepage.css
@@ -7,6 +7,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 header {
     width: 100%;
     height: 100px;
@@ -75,6 +76,7 @@ main {
     width: 100%;
     height: 1000px;
 }
+
 .introduction {
     width: 100%;
     height: 600px;
@@ -83,10 +85,13 @@ main {
     background-image: url(homepageResources/cover.jpg);
     background-size: cover;
 }
-.introduction h1,p {
+
+.introduction h1,
+.introduction p {
     width: max-content;
     text-align: center;
     font-family: 'Mali', sans-serif;
+    line-height: 1.5;
     margin: 10px;
     padding: 15px;
     color: #fff;
@@ -96,13 +101,60 @@ main {
     border-radius: 25px;
     box-shadow: 0 0 40px rgba(0,0,0,0.1)
 }
+
 .cards {
     border: 1px solid grey;
     width: 100%;
 }
+
 /*----- footer -----*/
 footer {
-    border: 1px solid grey;
     width: 100%;
-    height: 500px;
+    height: 300px;
+    background-color: #E5EEFF;
+    display: flex;
+}
+
+.footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin: 30px 100px;  
+    gap: 15px; 
+}
+
+.about {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Mali', sans-serif;
+}
+
+.location {
+    margin-top: 15px;
+    line-height: 1.5;
+}
+
+/*contact button*/
+.social-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.social-btn {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #222;
+  font-size: 1rem;
+  font-family: 'Manrope', sans-serif;
+  cursor: pointer;
+}
+
+.social-btn img {
+  width: 30px;
+  height: 30px;
+  margin-right: 12px;
+  object-fit: contain;
 }
