--- a/src/main/resources/static/all.css
+++ b/src/main/resources/static/all.css
@@ -1,3 +1,14 @@
+:root {
+    --gray-bg: #f2f2f2;
+    --transition: all 0.3s ease;
+    --border-radius: 15px;
+    --primary-color: #4A69FF;
+    --text-color: #333;
+    --button-black:#010002;
+    --background-light: #f9f9f9;
+    --background-main: #E5EEFF;
+}
+
 /*----- header -----*/
 header {
     width: 100%;
