--- a/src/main/resources/static/all.css
+++ b/src/main/resources/static/all.css
@@ -105,3 +105,67 @@ header {
   background-color: #000;
   color: #fff;
 }
+
+/*----- footer -----*/
+footer {
+    width: 100%;
+    background-color: #E5EEFF;
+    display: flex;
+    padding: 30px 100px;
+}
+
+.footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 15px; 
+}
+
+/* responsive for footer*/
+@media (max-width: 768px) {
+    .footer {
+        display: flex;
+        flex-direction: column; /* ให้ div เรียงลง */
+        gap: 20px;
+    }
+}
+
+.about {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: 'Mali', sans-serif;
+}
+
+.location {
+    margin-top: 15px;
+    line-height: 1.5;
+}
+
+/*contact button*/
+.social-container {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.social-btn {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: #222;
+  font-size: 1rem;
+  font-family: 'Manrope', sans-serif;
+  cursor: pointer;
+}
+
+.social-btn img {
+  width: 30px;
+  height: 30px;
+  margin-right: 12px;
+  object-fit: contain;
+}
+
+.social-btn:hover {
+    transform: scale(1.05);
+}
