--- a/src/main/resources/static/all.css
+++ b/src/main/resources/static/all.css
@@ -7,6 +7,7 @@
     --button-black:#010002;
     --background-light: #f9f9f9;
     --background-main: #E5EEFF;
+    --button-yellow: #ffd102;
 }
 
 /*----- header -----*/
