--- a/src/main/resources/static/contact.css
+++ b/src/main/resources/static/contact.css
@@ -7,3 +7,44 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+/*----- main -----*/
+main {
+  width: 100%;
+  padding: 80px 40px;
+}
+
+.main-about {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.main-about p {
+  text-align: center;
+  font-family: 'Mali', sans-serif;
+}
+
+.main-contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.title {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+}
+
+.title p {
+  text-align: center;
+  width: 100%;
+  font-family: 'Mali', sans-serif;
+}
+
+hr {
+  width: 100%;
+  height: 5px;
+  background-color: yellow;
+}
