--- a/src/main/resources/static/all.css
+++ b/src/main/resources/static/all.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Mali&family=Itim&family=Kodchasan&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700&display=swap');
+
 :root {
     --gray-bg: #f2f2f2;
     --transition: all 0.3s ease;
