--- a/src/main/resources/static/homepage.css
+++ b/src/main/resources/static/homepage.css
@@ -1,17 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Mali&family=Itim&family=Kodchasan&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700&display=swap');
-
 /*----- header -----*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Manrope', sans-serif;
+
 }
 
 /*----- main -----*/
 main {
-    width: 100%;
-    height: 1000px;
+    width: 100%;  
+    text-align: center; /* << คำสั่งนี้จะจัด h1 และ p ที่อยู่ข้างในให้อยู่กลาง */
 }
 
 .introduction {
@@ -51,4 +50,31 @@ main {
 .cards {
     border: 1px solid grey;
     width: 100%;
+}
+
+.pet-preview-section {
+    margin: 50px 100px;
+}
+
+.divider-container {
+    display: flex;
+    align-items: center; /* Vertically center the items */
+    text-align: center;
+    margin: 1.5rem 0; /* Add some space above and below */
+}
+
+
+/* The horizontal line style */
+.line {
+    flex-grow: 1;         /* Allows the line to take up available space */
+    height: 5px;          /* Thickness of the line */
+    background-color: var(--button-yellow); /* <<< เปลี่ยนสีเส้นตรงนี้ */
+    border-radius: 50px;
+}
+
+/* Text in the middle */
+.divider-text {
+    margin: 0 1rem; /* Adds space between the lines and the text */
+    color: var(--text-color);
+    padding: 0 50px;
 }
