--- a/src/main/resources/static/petlisting.css
+++ b/src/main/resources/static/petlisting.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mali&family=Itim&family=Kodchasan&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700&display=swap');
+
+
 
 /* Reset พื้นฐาน */
 * {
@@ -11,7 +10,7 @@
 
 /* ตั้งค่า font และสีพื้นหลัง */
 body {
-    font-family: "Inter", sans-serif;
+    font-family: 'Manrope', 'Itim', sans-serif;
     background-color: #f9f9f9;
     color: #333;
     line-height: 1.5;
