--- a/src/main/resources/static/all.css
+++ b/src/main/resources/static/all.css
@@ -152,6 +152,9 @@ footer {
     width: 100%;
     display: flex;
     flex-direction: column;
+}
+
+.about p {
     font-family: 'Mali', sans-serif;
 }
 
