--- a/src/main/resources/static/login-register.css
+++ b/src/main/resources/static/login-register.css
@@ -158,7 +158,7 @@ h1 {
 
 
 /* Styling for the input fields */
-.username-input,
+.username-input,.email-input,
 .password-input {
     width: 100%;
     padding: 12px 12px 12px 40px; /* Add padding to the left for the icon */
