--- a/src/main/resources/static/all.css
+++ b/src/main/resources/static/all.css
@@ -36,7 +36,6 @@ header {
 .logo img {
     width: 60px;
     height: 60px;
-    /*margin: 10px 40px;*/
 }
 
 /*----- Menu -----*/
@@ -77,6 +76,7 @@ header {
         display: none;
         flex-direction: column;
         position: absolute;
+        z-index: 1;
         top: 60px;
         right: 20px;
         background: white;
