--- a/src/main/resources/static/contact.css
+++ b/src/main/resources/static/contact.css
@@ -8,7 +8,16 @@
 /*----- main -----*/
 main {
   width: 100%;
-  padding: 50px 100px;
+}
+
+.section {
+    margin: 50px 100px;
+}
+
+@media (max-width: 768px) {
+    .section {
+        margin: 50px 20px;
+    }
 }
 
 .main-about {
@@ -47,6 +56,7 @@ main {
   width: fit-content;
   padding: 0 50px;
   font-family: 'Manrope', sans-serif;
+  font-weight: 600;
 }
 
 hr {
