--- a/src/main/resources/static/petdetail.css
+++ b/src/main/resources/static/petdetail.css
@@ -12,69 +12,6 @@ body {
     background-color: #f5f5f5;
 }
 
-/*----- header -----*/
-header {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    background-color: #E5EEFF;
-}
-
-/*----- Navigation bar -----*/
-.navbar {
-    width: 100%;
-    margin: 0 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-/*----- Logo -----*/
-.logo img {
-    width: 60px;
-    height: 60px;
-    /*margin: 10px 40px;*/
-}
-
-/*----- Menu -----*/
-.nav-links {
-    list-style: none;
-    display: flex;
-    /*margin: 10px 100px 0 0;*/
-    padding: 0;
-}
-
-.nav-links a {
-    text-decoration: none;
-    color: #222;
-    padding: 15px 20px;
-    border-radius: 50px;
-    transition: background 0.2s;
-    font-family: 'Manrope', sans-serif;
-    font-size: 16px;
-}
-
-.nav-links a:hover,
-.nav-links a.active {
-  background-color: #FFFFFF;
-}
-
-/*----- Login button -----*/
-.login-btn {
-  border: 1px solid #000;
-  background: transparent;
-  border-radius: 20px;
-  padding: 6px 20px;
-  /*margin: 10px 20px;*/
-  cursor: pointer;
-  transition: all 0.2s;
-  font-family: 'Manrope', sans-serif;
-}
-
-.login-btn:hover {
-  background-color: #000;
-  color: #fff;
-}
 .fullwidth-section {
     width: 100%;
     background-color: #fff; 
@@ -82,16 +19,32 @@ header {
 }
 
 .container {
-    max-width: 900px;
+    max-width: 1000px;
     margin: 0 auto; 
     background-color: transparent; 
     padding: 0 20px; 
 }
 
-h1 {
-    text-align: center;
+.title {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    gap: 30px;
     margin-bottom: 50px;
-    font-size: 32px;
+}
+
+.title h1 {
+    text-align: center;
+    color: #010002;
+    font-size: clamp(1.5rem, 5vw, 1.8rem);
+}
+
+.title hr {
+  flex: 1;
+  height: 5px;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--button-yellow);
 }
 
 .pet-profile {
@@ -140,7 +93,7 @@ h1 {
 }
 
 .detail-section h3 {
-    font-size: 16px;
+    font-size: 1.3rem;
     margin-bottom: 15px;
     color: #333;
 }
@@ -152,7 +105,7 @@ h1 {
 
 .detail-section li {
     margin-bottom: 8px;
-    font-size: 14px;
+    font-size: 1.1rem;
     color: #555;
 }
 
@@ -167,7 +120,7 @@ h1 {
     padding: 12px 40px;
     border: none;
     border-radius: 5px;
-    font-size: 14px;
+    font-size: 1.1rem;
     cursor: pointer;
     transition: all 0.3s;
 }
