--- a/src/main/resources/static/petlisting.css
+++ b/src/main/resources/static/petlisting.css
@@ -1,6 +1,3 @@
-
-
-
 /* Reset พื้นฐาน */
 * {
     margin: 0;
@@ -37,9 +34,30 @@ main section {
     margin-bottom: 2rem;
 }
 
+.title {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+}
+
+.title h1 {
+    color: #010002;
+    font-size: clamp(1.5rem, 5vw, 1.8rem);
+    width: fit-content;
+}
+
+.title hr {
+  flex: 1;
+  height: 5px;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--button-yellow);
+}
+
 .description {
     padding: 1rem;
     color: #5f5f5fd0;
+    font-size: 1.1rem
 }
 .pet-card img {
     height: 220px;
