--- a/src/main/resources/static/userform.css
+++ b/src/main/resources/static/userform.css
@@ -6,24 +6,22 @@
 
 main {
     background: #fbfbfb;
-    padding: 50px 0;
+    padding: 50px;
 }
 
 /*--- Title ---*/
 .title {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 30px;
   margin-bottom: 50px;
 }
 
 .title h1 {
-  text-align: center;
-  color: #010002;
-  letter-spacing: 0.1em;
-  word-spacing: 3px;
-  width: fit-content;
-  padding: 0 50px;
+    text-align: center;
+    color: #010002;
+    font-size: clamp(1.5rem, 5vw, 1.8rem);
+    width: fit-content;
 }
 
 .title hr {
@@ -31,7 +29,7 @@ main {
   height: 5px;
   border: none;
   border-radius: 5px;
-  background-color: #FFD102;
+  background-color: var(--button-yellow);
 }
 
 /* --- main part ---*/
@@ -47,7 +45,6 @@ form {
     display: flex;
     flex-direction: column;
     gap: 50px;
-    margin: 0 20px;
 }
 
 .part p {
@@ -68,7 +65,7 @@ form {
 label {
     display: block;
     margin-top: 25px;
-    font-size: 1em;
+    font-size: 14px;
     font-weight: 700;
     font-family: 'Mali', sans-serif;
     color: #010002;
@@ -89,7 +86,7 @@ input[type="file"] {
     width: 100%;
     padding: 12px 10px;
     margin-top: 6px;
-    font-size: 1rem;
+    font-size: 14px;
     font-weight: 500;
     font-family: 'Manrope', 'Mali', sans-serif;
     border: 1.8px solid #a8a8a8;
@@ -149,7 +146,8 @@ textarea {
 
 .select label,
 .agreement {
-    font-weight: 400;    
+    font-weight: 400;
+    line-height: 1.4;
 }
 
 input[type="radio"],
@@ -168,7 +166,7 @@ input[type="checkbox"] {
 #submit {
     width: 100%;
     padding: 14px;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 700;
     background-color: rgb(180, 179, 179);
     color: #333;
@@ -187,11 +185,11 @@ input[type="checkbox"] {
 #cancel {
     width: 100%;
     padding: 14px;
-    font-size: 1.3rem;
-    font-weight: 700;
-    background-color: #FFFFFF;
+    font-size: 1.1rem;
+    font-weight: 500;
+    background: #e0e0e0;
     color: #333;
-    border: 2px solid black;
+    border: none;
     border-radius: 10px;
     cursor: pointer;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
@@ -199,7 +197,7 @@ input[type="checkbox"] {
 }
 
 #cancel:hover {
-    background-color: #e0dddd;
+    background: #d0d0d0;
 }
 
 .error {
