--- a/src/main/resources/static/User/userform.css
+++ b/src/main/resources/static/User/userform.css
@@ -208,3 +208,93 @@ input[type="checkbox"] {
     line-height: 1.4;
     word-wrap: break-word;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2); 
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000; 
+}
+
+.popup {
+  position: relative; /* ทำให้ปุ่ม absolute อ้างอิง popup */
+  top: 50%;
+  left: 50%;
+  width: max-content;
+  margin: 10px;
+  padding: 20px 30px;
+  transform: translate(-50%, -50%);
+  background: #fbfbfb;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+}
+
+.popup h1 {
+    font-size: clamp(1.1rem, 5vw, 1.5rem);
+    font-weight: 500;
+    color: #333;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    white-space: pre-line;
+}
+
+.goButton {
+    display: flex;
+    width: 100%;
+    margin-top: 25px;
+    gap: 20px;
+}
+
+.popup button {
+    padding: 8px 16px;
+    font-size: 1rem;
+    font-family: 'Itim', sans-serif;
+    color: #333;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .goButton {
+        flex-direction: column-reverse;
+        gap: 10px;
+    }
+}
+
+#goHome {
+    background: #e0e0e0;
+}
+
+#goHome:hover,
+#close:hover {
+    background: #d0d0d0;
+}
+
+#goStatus {
+    background: #ffc107;
+}
+
+#goStatus:hover {
+    background: #ffb300;
+}
+
+#close {
+    width: 25px;
+    height: 25px;
+    position: absolute;
+    top: 10px; 
+    right: 10px;
+    background: none;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+}
