--- a/src/main/resources/static/Admin/sidebar.css
+++ b/src/main/resources/static/Admin/sidebar.css
@@ -56,8 +56,8 @@ body {
 }
 
 .logo-icon {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     background: none;
     display: flex;
     align-items: center;
@@ -79,7 +79,7 @@ body {
     display: flex;
     align-items: center;
     gap: 12px;
-    padding: 12px 16px;
+    padding: 15px 60px;
     cursor: pointer;
     transition: all 0.3s;
     background: var(--bg-light);
@@ -134,6 +134,10 @@ body {
     display: block; 
 }
 
+.mini-nav-item {
+    display: flex;
+    gap: 10px;
+}
 .logout {
     margin-top: auto;
     width: 100%;
